Limit DB connections with semaphore